[gd_scene load_steps=35 format=3 uid="uid://biqkm1reqou0b"]

[ext_resource type="Script" uid="uid://bnwbh0l5kw86n" path="res://in_game_ui.gd" id="1_dpq86"]
[ext_resource type="Texture2D" uid="uid://diw2ksy15ntxj" path="res://Icons/Chapter.png" id="1_kenku"]
[ext_resource type="Texture2D" uid="uid://bbmhvki63hkqj" path="res://Icons/Index.png" id="2_cwbuu"]
[ext_resource type="Texture2D" uid="uid://tgn3w0njnhoq" path="res://Icons/Inventory.png" id="3_4v80v"]
[ext_resource type="Texture2D" uid="uid://bt54oavoqvhb6" path="res://Icons/Character.png" id="4_0qsvx"]
[ext_resource type="FontFile" uid="uid://dyar6fh26gmft" path="res://Fonts/Inter Extra Bold 800.otf" id="5_4v80v"]
[ext_resource type="Texture2D" uid="uid://haaebqb7ldc7" path="res://Icons/Menu.png" id="6_uusyb"]
[ext_resource type="Texture2D" uid="uid://dleqlif4l4w60" path="res://Icons/Robot.png" id="7_ep3pr"]
[ext_resource type="Texture2D" uid="uid://ds0odsyrbdi38" path="res://Icons/to-do-list.png" id="8_ep3pr"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_h3j15"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_tjjbm"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_nw3uw"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_u4etj"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4v80v"]
corner_radius_top_left = 100
corner_radius_top_right = 100
corner_radius_bottom_right = 100
corner_radius_bottom_left = 100

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_cwbuu"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_4v80v"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_0qsvx"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_uusyb"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ep3pr"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_dpq86"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_l8h7b"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ukwlx"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_pabwj"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_rkija"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_46s8a"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_4plnj"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_101o6"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_k0sw5"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_101o6"]
bg_color = Color(0.205117, 0.205117, 0.205117, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ixewm"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.262933, 0.262932, 0.262932, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8qo7k"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ep3pr"]
corner_radius_top_left = 100
corner_radius_top_right = 100
corner_radius_bottom_right = 100
corner_radius_bottom_left = 100
expand_margin_left = 5.0
expand_margin_top = 5.0
expand_margin_right = 5.0
expand_margin_bottom = 5.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_l8h7b"]
bg_color = Color(0.87, 0, 0, 1)
corner_radius_top_left = 100
corner_radius_top_right = 100
corner_radius_bottom_right = 100
corner_radius_bottom_left = 100

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dpq86"]
bg_color = Color(0.639216, 0, 0.960784, 1)
corner_radius_top_left = 100
corner_radius_top_right = 100
corner_radius_bottom_right = 100
corner_radius_bottom_left = 100

[node name="InGame UI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_dpq86")
metadata/_edit_horizontal_guides_ = [42.0, 85.0, 186.0, 210.0, 646.0, 693.0, 598.0]
metadata/_edit_vertical_guides_ = [51.0, 1239.0]

[node name="MenuButton" type="Button" parent="."]
layout_mode = 0
offset_left = 20.0
offset_top = 21.0
offset_right = 55.0
offset_bottom = 56.0
theme_override_constants/icon_max_width = 35
theme_override_styles/focus = SubResource("StyleBoxEmpty_h3j15")
theme_override_styles/hover = SubResource("StyleBoxEmpty_tjjbm")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_nw3uw")
theme_override_styles/normal = SubResource("StyleBoxEmpty_u4etj")
icon = ExtResource("6_uusyb")

[node name="ChatBotButton" type="Button" parent="."]
layout_mode = 0
offset_left = 228.0
offset_top = 20.0
offset_right = 263.0
offset_bottom = 55.0
theme_override_constants/icon_max_width = 35
theme_override_styles/focus = SubResource("StyleBoxEmpty_h3j15")
theme_override_styles/hover = SubResource("StyleBoxEmpty_tjjbm")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_nw3uw")
theme_override_styles/normal = SubResource("StyleBoxEmpty_u4etj")
icon = ExtResource("7_ep3pr")

[node name="MAp Size Example" type="Panel" parent="."]
layout_mode = 0
offset_left = 71.0
offset_top = 19.0
offset_right = 213.0
offset_bottom = 161.0
theme_override_styles/panel = SubResource("StyleBoxFlat_4v80v")

[node name="ESC" type="Label" parent="."]
layout_mode = 0
offset_left = 22.0
offset_top = 62.0
offset_right = 55.0
offset_bottom = 85.0
theme_override_fonts/font = ExtResource("5_4v80v")
text = "ESC"

[node name="F1" type="Label" parent="."]
layout_mode = 0
offset_left = 238.0
offset_top = 62.0
offset_right = 256.0
offset_bottom = 85.0
theme_override_fonts/font = ExtResource("5_4v80v")
text = "F1"

[node name="TAB" type="Label" parent="."]
layout_mode = 0
offset_left = 21.0
offset_top = 209.0
offset_right = 54.0
offset_bottom = 232.0
theme_override_fonts/font = ExtResource("5_4v80v")
text = "TAB"

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 15.0
offset_top = 692.0
offset_right = 130.0
offset_bottom = 715.0
text = "UID : 00000001"

[node name="Dashboard" type="HBoxContainer" parent="."]
layout_mode = 0
offset_left = 949.0
offset_top = 43.0
offset_right = 1239.0
offset_bottom = 80.0
theme_override_constants/separation = 50

[node name="ChapterButton" type="Button" parent="Dashboard"]
layout_mode = 2
theme_override_constants/icon_max_width = 35
theme_override_styles/focus = SubResource("StyleBoxEmpty_cwbuu")
theme_override_styles/hover = SubResource("StyleBoxEmpty_4v80v")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_0qsvx")
theme_override_styles/normal = SubResource("StyleBoxEmpty_uusyb")
icon = ExtResource("1_kenku")

[node name="IndexButton" type="Button" parent="Dashboard"]
layout_mode = 2
theme_override_constants/icon_max_width = 35
theme_override_styles/focus = SubResource("StyleBoxEmpty_ep3pr")
theme_override_styles/hover = SubResource("StyleBoxEmpty_dpq86")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_l8h7b")
theme_override_styles/normal = SubResource("StyleBoxEmpty_ukwlx")
icon = ExtResource("2_cwbuu")

[node name="InventoryButton" type="Button" parent="Dashboard"]
layout_mode = 2
theme_override_constants/icon_max_width = 35
theme_override_styles/focus = SubResource("StyleBoxEmpty_h3j15")
theme_override_styles/hover = SubResource("StyleBoxEmpty_tjjbm")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_nw3uw")
theme_override_styles/normal = SubResource("StyleBoxEmpty_u4etj")
icon = ExtResource("3_4v80v")

[node name="CharacterButton" type="Button" parent="Dashboard"]
layout_mode = 2
theme_override_constants/icon_max_width = 35
theme_override_styles/focus = SubResource("StyleBoxEmpty_pabwj")
theme_override_styles/hover = SubResource("StyleBoxEmpty_rkija")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_46s8a")
theme_override_styles/normal = SubResource("StyleBoxEmpty_4plnj")
icon = ExtResource("4_0qsvx")

[node name="F Names" type="HBoxContainer" parent="."]
layout_mode = 0
offset_left = 957.0
offset_top = 86.0
offset_right = 1231.0
offset_bottom = 106.0
theme_override_constants/separation = 64

[node name="F2" type="Label" parent="F Names"]
layout_mode = 2
theme_override_fonts/font = ExtResource("5_4v80v")
text = "F2"

[node name="F3" type="Label" parent="F Names"]
layout_mode = 2
theme_override_fonts/font = ExtResource("5_4v80v")
text = "F3"

[node name="F4" type="Label" parent="F Names"]
layout_mode = 2
theme_override_fonts/font = ExtResource("5_4v80v")
text = "F3"

[node name="F5" type="Label" parent="F Names"]
layout_mode = 2
theme_override_fonts/font = ExtResource("5_4v80v")
text = "F5"

[node name="TaskButton" type="Button" parent="."]
layout_mode = 0
offset_left = 20.0
offset_top = 168.0
offset_right = 55.0
offset_bottom = 203.0
theme_override_constants/icon_max_width = 35
theme_override_styles/focus = SubResource("StyleBoxEmpty_h3j15")
theme_override_styles/hover = SubResource("StyleBoxEmpty_tjjbm")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_nw3uw")
theme_override_styles/normal = SubResource("StyleBoxEmpty_u4etj")
icon = ExtResource("8_ep3pr")

[node name="Currect TaskTitle" type="Label" parent="TaskButton"]
layout_mode = 0
offset_left = 41.0
offset_right = 211.0
offset_bottom = 23.0
theme_override_colors/font_color = Color(1, 0.843137, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("5_4v80v")
text = "â—† Example Title Here"

[node name="Currect TaskSmallDescription" type="Label" parent="TaskButton"]
layout_mode = 0
offset_left = 62.0
offset_top = 18.0
offset_right = 259.0
offset_bottom = 41.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 15
text = "- Example Description Here"

[node name="Skills" type="Panel" parent="."]
layout_mode = 0
offset_left = 939.0
offset_top = 526.0
offset_right = 1239.0
offset_bottom = 702.0
theme_override_styles/panel = SubResource("StyleBoxEmpty_101o6")

[node name="PlayerName" type="Label" parent="Skills"]
layout_mode = 0
offset_left = 3.0
offset_top = -16.0
offset_right = 43.0
offset_bottom = 7.0
theme_override_constants/outline_size = 2
text = "Player Name"

[node name="CurrentLevel" type="Label" parent="Skills"]
layout_mode = 0
offset_left = 213.0
offset_top = -16.0
offset_right = 300.0
offset_bottom = 7.0
theme_override_constants/outline_size = 2
text = "LVL 1"
horizontal_alignment = 2
vertical_alignment = 1

[node name="EquippedButton" type="Button" parent="Skills"]
clip_contents = true
layout_mode = 0
offset_left = 2.0
offset_top = 73.0
offset_right = 175.0
offset_bottom = 167.0
theme_override_fonts/font = ExtResource("5_4v80v")
theme_override_styles/focus = SubResource("StyleBoxEmpty_k0sw5")
theme_override_styles/hover = SubResource("StyleBoxFlat_101o6")
theme_override_styles/pressed = SubResource("StyleBoxFlat_ixewm")
theme_override_styles/normal = SubResource("StyleBoxFlat_8qo7k")
text = "No
Equipment
Set"
autowrap_mode = 3

[node name="Label" type="Label" parent="Skills/EquippedButton"]
layout_mode = 0
offset_left = 6.0
offset_top = 2.0
offset_right = 16.0
offset_bottom = 25.0
theme_override_fonts/font = ExtResource("5_4v80v")
text = "E"

[node name="InHandButton1" type="Button" parent="Skills"]
clip_contents = true
layout_mode = 0
offset_left = 182.0
offset_top = 73.0
offset_right = 237.0
offset_bottom = 117.0
theme_override_fonts/font = ExtResource("5_4v80v")
theme_override_styles/focus = SubResource("StyleBoxEmpty_k0sw5")
theme_override_styles/hover = SubResource("StyleBoxFlat_101o6")
theme_override_styles/pressed = SubResource("StyleBoxFlat_ixewm")
theme_override_styles/normal = SubResource("StyleBoxFlat_8qo7k")
autowrap_mode = 3

[node name="Label" type="Label" parent="Skills/InHandButton1"]
layout_mode = 0
offset_left = 6.0
offset_top = 2.0
offset_right = 16.0
offset_bottom = 25.0
theme_override_fonts/font = ExtResource("5_4v80v")
text = "1"

[node name="InHandButton2" type="Button" parent="Skills"]
clip_contents = true
layout_mode = 0
offset_left = 244.0
offset_top = 73.0
offset_right = 299.0
offset_bottom = 117.0
theme_override_fonts/font = ExtResource("5_4v80v")
theme_override_styles/focus = SubResource("StyleBoxEmpty_k0sw5")
theme_override_styles/hover = SubResource("StyleBoxFlat_101o6")
theme_override_styles/pressed = SubResource("StyleBoxFlat_ixewm")
theme_override_styles/normal = SubResource("StyleBoxFlat_8qo7k")
autowrap_mode = 3

[node name="Label" type="Label" parent="Skills/InHandButton2"]
layout_mode = 0
offset_left = 6.0
offset_top = 2.0
offset_right = 16.0
offset_bottom = 25.0
theme_override_fonts/font = ExtResource("5_4v80v")
text = "2"

[node name="InHandButton3" type="Button" parent="Skills"]
clip_contents = true
layout_mode = 0
offset_left = 182.0
offset_top = 123.0
offset_right = 237.0
offset_bottom = 167.0
theme_override_fonts/font = ExtResource("5_4v80v")
theme_override_styles/focus = SubResource("StyleBoxEmpty_k0sw5")
theme_override_styles/hover = SubResource("StyleBoxFlat_101o6")
theme_override_styles/pressed = SubResource("StyleBoxFlat_ixewm")
theme_override_styles/normal = SubResource("StyleBoxFlat_8qo7k")
autowrap_mode = 3

[node name="Label" type="Label" parent="Skills/InHandButton3"]
layout_mode = 0
offset_left = 6.0
offset_top = 2.0
offset_right = 16.0
offset_bottom = 25.0
theme_override_fonts/font = ExtResource("5_4v80v")
text = "3"

[node name="InHandButton4" type="Button" parent="Skills"]
clip_contents = true
layout_mode = 0
offset_left = 244.0
offset_top = 123.0
offset_right = 299.0
offset_bottom = 167.0
theme_override_fonts/font = ExtResource("5_4v80v")
theme_override_styles/focus = SubResource("StyleBoxEmpty_k0sw5")
theme_override_styles/hover = SubResource("StyleBoxFlat_101o6")
theme_override_styles/pressed = SubResource("StyleBoxFlat_ixewm")
theme_override_styles/normal = SubResource("StyleBoxFlat_8qo7k")
autowrap_mode = 3

[node name="Label" type="Label" parent="Skills/InHandButton4"]
layout_mode = 0
offset_left = 6.0
offset_top = 2.0
offset_right = 16.0
offset_bottom = 25.0
theme_override_fonts/font = ExtResource("5_4v80v")
text = "4"

[node name="HealthBar" type="ProgressBar" parent="Skills"]
layout_mode = 0
offset_left = 6.0
offset_top = 40.0
offset_right = 295.0
offset_bottom = 54.0
theme_override_constants/outline_size = 3
theme_override_fonts/font = ExtResource("5_4v80v")
theme_override_font_sizes/font_size = 10
theme_override_styles/background = SubResource("StyleBoxFlat_ep3pr")
theme_override_styles/fill = SubResource("StyleBoxFlat_l8h7b")
value = 100.0
rounded = true
show_percentage = false

[node name="HealthPercent" type="Label" parent="Skills/HealthBar"]
layout_mode = 0
offset_left = 7.0
offset_top = -5.0
offset_right = 284.0
offset_bottom = 18.0
theme_override_fonts/font = ExtResource("5_4v80v")
theme_override_font_sizes/font_size = 12
vertical_alignment = 1

[node name="XpBar" type="ProgressBar" parent="Skills"]
layout_mode = 0
offset_left = 6.0
offset_top = 12.0
offset_right = 295.0
offset_bottom = 26.0
theme_override_constants/outline_size = 3
theme_override_fonts/font = ExtResource("5_4v80v")
theme_override_font_sizes/font_size = 10
theme_override_styles/background = SubResource("StyleBoxFlat_ep3pr")
theme_override_styles/fill = SubResource("StyleBoxFlat_dpq86")
value = 50.0
rounded = true
show_percentage = false

[node name="XpPercent" type="Label" parent="Skills/XpBar"]
layout_mode = 0
offset_left = 7.0
offset_top = -5.0
offset_right = 284.0
offset_bottom = 18.0
theme_override_fonts/font = ExtResource("5_4v80v")
theme_override_font_sizes/font_size = 12
vertical_alignment = 1
